--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push klaudiuszkudla/multi-nginx
   - docker push klaudiuszkudla/multi-server
   - docker push klaudiuszkudla/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: multi-docker
+  env: Multidocker-env
+  bucket_name: elasticbeanstalk-eu-north-1-851725555123
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
